--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node build/src/main.js --max-old-space-size=1500 --cpu-shares=1024",
-    "seed": "node build/src/cli.js seed -s 104857600 -n 2",
+    "seed": "node build/src/cli.js seed -s 104857600 -n 5",
     "dev": "nodemon build/src/main.js",
     "cli": "node build/src/cli.js",
     "clean": "rimraf coverage build tmp",
@@ -26,11 +26,14 @@
     "@types/node": "~20",
     "@typescript-eslint/eslint-plugin": "~6.15",
     "@typescript-eslint/parser": "~6.15",
+    "chai": "^5.0.3",
+    "chai-http": "^4.4.0",
     "commander": "^11.1.0",
     "eslint": "~8.56",
     "eslint-config-prettier": "~9.1",
     "eslint-plugin-jest": "~27.6",
     "jest": "~29.7",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.3",
     "prettier": "~3.1",
     "rimraf": "~5.0",
